<resources>
    <string name="app_name">Any_credit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Do I have any credit?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Add Store</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="txt_totalCredit">Total Credit:</string>
    <string name="tools">Tools</string>
    <string name="title_activity_add_store">Add New Store</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="credit_label">credit label</string>
    <string name="add_credit">Add Credit</string>
    <string name="remove_credit">Remove Credit</string>
    <string name="arrow_to_pull">Arrow to pull</string>
    <string name="logo">Logo</string>
    <string name="title">Do I have any credit?</string>
    <string name="select_store">Select Store:</string>
</resources>
